compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:239:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for(int i=0; i<azenyem.size(); i++)
                      ~^~~~~~~~~~~~~~~
/main.cpp:241:32: error: ‘class std::vector<MessagePiece>’ has no member named ‘message’
             std::cerr<<azenyem.message<<" "<<azenyem.index<<std::endl;
                                ^~~~~~~
/main.cpp:241:54: error: ‘class std::vector<MessagePiece>’ has no member named ‘index’
             std::cerr<<azenyem.message<<" "<<azenyem.index<<std::endl;
                                                      ^~~~~
/main.cpp:130:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~